--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <div class="progress-container">
         <div class="progress-bar">
-            <div class="color1"></div>
+            <div class="color1">sya adalah manusia</div>
             <div class="color2"></div>
             <div class="color3"></div>
         </div>
